--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="copyright" content="">
 	<meta name="robots" content="index">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="CSS/estilos.css">
 </head>
 <body>
 	<header>
